--- a/MES/Views/CommonEquipmentView.xaml
+++ b/MES/Views/CommonEquipmentView.xaml
@@ -17,31 +17,15 @@
              d:DesignWidth="800"
              DataContext="{dxmvvm:ViewModelSource Type=ViewModels:CommonEquipmentVM}">
     <UserControl.Resources>
-        <DataTemplate x:Key="WaCode">
-            <dxg:LookUpEdit
+        <DataTemplate x:Key="WaCodeField">
+            <dxe:ComboBoxEdit
                 Name="PART_Editor"
-                ItemsSource="{Binding View.DataContext.WaCode}"
+                ItemsSource="{Binding RowData.Row.BizAreaCode, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CascadingWorkArea}}"
                 ValueMember="WaCode"
                 DisplayMember="WaName"
-                EditValue="{Binding RowData.Row.WaCode, UpdateSourceTrigger=PropertyChanged}"
                 ShowSizeGrip="False"
-                IsTextEditable="True" 
                 NullValueButtonPlacement="EditBox"
-                AutoPopulateColumns="False"
-                InvalidValueBehavior="AllowLeaveEditor"
-                IsPopupAutoWidth="False"
-                PopupContentTemplate="{StaticResource WaCodeTemplate}" />
-        </DataTemplate>
-        <DataTemplate x:Key="PauseGroup">
-            <dxe:ComboBoxEdit
-            Name="PART_Editor"
-            ItemsSource="{Binding View.DataContext.PauseGroup}"
-            ValueMember="GroupName"
-            DisplayMember="GroupName"
-            EditValue="{Binding RowData.Row.PauseGroup, UpdateSourceTrigger=PropertyChanged}"
-            ShowSizeGrip="False"
-            IsTextEditable="True" 
-            NullValueButtonPlacement="EditBox" />
+                IsTextEditable="False"/>
         </DataTemplate>
     </UserControl.Resources>
 
@@ -66,50 +50,32 @@
                                 <dxb:BarButtonItem Content="검색" KeyGesture="F5" Command="{Binding SearchCmd}" LargeGlyph="{dx:DXImage SvgImages/Spreadsheet/Zoom.svg}" />
                             </dxr:RibbonPageGroup>
                             <dxr:RibbonPageGroup Caption="Find">
-                                <dxb:BarStaticItem>
-                                    <dxb:BarStaticItem.ContentTemplate>
+                                <dxb:BarEditItem
+                                    EditValue="{Binding BizAreaCode, UpdateSourceTrigger=PropertyChanged}"
+                                    EditWidth="180"
+                                    Margin="0 5 0 0"
+                                    EditTemplate="{StaticResource BizAreaCode}" />
+                                <dxb:BarEditItem
+                                    EditValue="{Binding WaCode, UpdateSourceTrigger=PropertyChanged}"
+                                    EditWidth="180"
+                                    Margin="0 2 0 0"
+                                    EditTemplate="{StaticResource WaCode}" />
+                                <dxb:BarEditItem
+                                    EditValue="{Binding EqpName, UpdateSourceTrigger=PropertyChanged}"
+                                    Margin="0 5 0 0"
+                                    EditWidth="180">
+                                    <dxb:BarEditItem.EditTemplate>
                                         <DataTemplate>
-                                            <StackPanel Orientation="Horizontal" Margin="0 5 0 0">
-                                                <dxmvvm:Interaction.Behaviors>
-                                                    <dxmvvm:KeyToCommand KeyGesture="F5" Command="{Binding DataContext.SearchCmd, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"/>
-                                                    <dxmvvm:KeyToCommand KeyGesture="Enter" Command="{Binding DataContext.SearchCmd, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"/>
-                                                </dxmvvm:Interaction.Behaviors>
-                                                <StackPanel Orientation="Vertical">
-                                                    <dxe:TextEdit
-                                                        Width="200"
-                                                        Background="White"
-                                                        NullText="설비코드"
-                                                        Text="{Binding DataContext.EqpCode, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}">
-                                                        <dxe:TextEdit.InputBindings>
-                                                            <KeyBinding Key="Enter" Command="{Binding DataContext.SearchCmd, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}" />
-                                                        </dxe:TextEdit.InputBindings>
-                                                    </dxe:TextEdit>
-                                                    <dxe:TextEdit
-                                                        Width="200" 
-                                                        Margin="0 2 0 0"
-                                                        NullText="설비명"
-                                                        Background="White"
-                                                        Text="{Binding DataContext.EqpName, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}">
-                                                        <dxe:TextEdit.InputBindings>
-                                                            <KeyBinding Key="Enter" Command="{Binding DataContext.SearchCmd, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}" />
-                                                        </dxe:TextEdit.InputBindings>
-                                                    </dxe:TextEdit>
-                                                </StackPanel>
-                                                <StackPanel Orientation="Vertical" Margin="5 0 0 0">
-                                                    <dxe:ComboBoxEdit
-                                                        Width="180"
-                                                        NullText="공장정보"
-                                                        NullValueButtonPlacement="EditBox"
-                                                        Background="White"
-                                                        ItemsSource="{Binding DataContext.BizAreaCodeList, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"
-                                                        EditValue="{Binding DataContext.EditBizAreaCode, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"
-                                                        ValueMember="MinorCode"
-                                                        DisplayMember="MinorName" />
-                                                </StackPanel>
-                                            </StackPanel>
+                                            <dxe:TextEdit
+                                                x:Name="PART_Editor"
+                                                NullText="설비명">
+                                                <dxe:TextEdit.InputBindings>
+                                                    <KeyBinding Key="Enter" Command="{Binding DataContext.SearchCmd, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}" />
+                                                </dxe:TextEdit.InputBindings>
+                                            </dxe:TextEdit>
                                         </DataTemplate>
-                                    </dxb:BarStaticItem.ContentTemplate>
-                                </dxb:BarStaticItem>
+                                    </dxb:BarEditItem.EditTemplate>
+                                </dxb:BarEditItem>
                             </dxr:RibbonPageGroup>
                             <dxr:RibbonPageGroup Caption="ERP Sync Task">
                                 <dxb:BarButtonItem Content="ERP 동기화" KeyGesture="CTRL+Y" Command="{Binding SyncErpCmd}" LargeGlyph="{dx:DXImage SvgImages/Dashboards/ConvertTo.svg}" />
@@ -165,11 +131,11 @@
                             FieldName="EqpCode" 
                             Header="설비코드"
                             MinWidth="150"/>
-                        <dxg:GridColumn 
-                            FieldName="EqpName" 
+                        <dxg:GridColumn
+                            FieldName="EqpName"
                             Header="설비명"
                             MinWidth="150"/>
-                        <dxg:GridColumn FieldName="WaCode" CellTemplate="{StaticResource WaCode}" Header="공정" MinWidth="100"/>
+                        <dxg:GridColumn FieldName="WaCode" CellTemplate="{StaticResource WaCodeField}" Header="공정" MinWidth="100"/>
                         <dxg:GridColumn 
                             FieldName="EqpState" 
                             Header="설비상태"
