--- a/MES/Views/CommonItemView.xaml
+++ b/MES/Views/CommonItemView.xaml
@@ -37,50 +37,34 @@
                                 <dxb:BarButtonItem Content="검색" KeyGesture="F5" Command="{Binding SearchCmd}" LargeGlyph="{dx:DXImage SvgImages/Spreadsheet/Zoom.svg}" />
                             </dxr:RibbonPageGroup>
                             <dxr:RibbonPageGroup Caption="Find">
-                                <dxb:BarStaticItem>
-                                    <dxb:BarStaticItem.ContentTemplate>
+                                <dxb:BarEditItem
+                                    EditValue="{Binding BizAreaCode, UpdateSourceTrigger=PropertyChanged}"
+                                    EditWidth="180"
+                                    Margin="0 5 0 0"
+                                    EditTemplate="{StaticResource BizAreaCode}" />
+                                <dxb:BarEditItem
+                                    EditValue="{Binding ItemCode, UpdateSourceTrigger=PropertyChanged}"
+                                    EditWidth="180"
+                                    Margin="0 2 0 0">
+                                    <dxb:BarEditItem.EditTemplate>
                                         <DataTemplate>
-                                            <StackPanel Orientation="Horizontal" Margin="0 5 0 0">
+                                            <dxe:TextEdit
+                                                x:Name="PART_Editor"
+                                                NullText="품목코드">
                                                 <dxmvvm:Interaction.Behaviors>
-                                                    <dxmvvm:KeyToCommand KeyGesture="F5" Command="{Binding DataContext.SearchCmd, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"/>
-                                                    <dxmvvm:KeyToCommand KeyGesture="Enter" Command="{Binding DataContext.SearchCmd, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"/>
+                                                    <dxmvvm:KeyToCommand
+                                                        KeyGesture="Enter"
+                                                        Command="{Binding DataContext.SearchCmd, RelativeSource={RelativeSource AncestorType={x:Type dxb:LightweightBarItemLinkControl}}}" />
                                                 </dxmvvm:Interaction.Behaviors>
-                                                <StackPanel Orientation="Vertical">
-                                                    <dxe:TextEdit
-                                                        Width="200"
-                                                        Background="White"
-                                                        NullText="품목코드"
-                                                        Text="{Binding DataContext.ItemCode, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}">
-                                                        <dxe:TextEdit.InputBindings>
-                                                            <KeyBinding Key="Enter" Command="{Binding DataContext.SearchCmd, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}" />
-                                                        </dxe:TextEdit.InputBindings>
-                                                    </dxe:TextEdit>
-                                                    <dxe:TextEdit
-                                                        Width="200"
-                                                        Margin="0 2 0 0"
-                                                        NullText="품목명"
-                                                        Background="White"
-                                                        Text="{Binding DataContext.ItemName, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}">
-                                                        <dxe:TextEdit.InputBindings>
-                                                            <KeyBinding Key="Enter" Command="{Binding DataContext.SearchCmd, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}" />
-                                                        </dxe:TextEdit.InputBindings>
-                                                    </dxe:TextEdit>
-                                                </StackPanel>
-                                                <StackPanel Orientation="Vertical" Margin="5 0 0 0">
-                                                    <dxe:ComboBoxEdit
-                                                        Width="180"
-                                                        NullText="공장정보"
-                                                        NullValueButtonPlacement="EditBox"
-                                                        Background="White"
-                                                        ItemsSource="{Binding DataContext.BizAreaCode, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"
-                                                        EditValue="{Binding DataContext.EditBizAreaCode, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"
-                                                        ValueMember="MinorCode"
-                                                        DisplayMember="MinorName" />
-                                                </StackPanel>
-                                            </StackPanel>
+                                            </dxe:TextEdit>
                                         </DataTemplate>
-                                    </dxb:BarStaticItem.ContentTemplate>
-                                </dxb:BarStaticItem>
+                                    </dxb:BarEditItem.EditTemplate>
+                                </dxb:BarEditItem>
+                                <dxb:BarEditItem
+                                    EditValue="{Binding ItemName, UpdateSourceTrigger=PropertyChanged}"
+                                    EditWidth="180"
+                                    Margin="0 5 0 0"
+                                    EditTemplate="{StaticResource ItemName}" />
                             </dxr:RibbonPageGroup>
                             <dxr:RibbonPageGroup Caption="ERP Sync Task">
                                 <dxb:BarButtonItem Content="ERP 동기화" KeyGesture="CTRL+Y" Command="{Binding SyncErpCmd}" LargeGlyph="{dx:DXImage SvgImages/Dashboards/ConvertTo.svg}" />
