--- a/MES/Views/ProductionEqpMonitorView.xaml
+++ b/MES/Views/ProductionEqpMonitorView.xaml
@@ -1,22 +1,19 @@
-﻿<UserControl 
-    x:Class="MesAdmin.Views.ProductionEqpMonitorView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"             
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
-    xmlns:view="clr-namespace:MesAdmin.Views"
-    xmlns:viewmodel="clr-namespace:MesAdmin.ViewModels"
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-    mc:Ignorable="d"
-    xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"         
-    d:DesignHeight="600" d:DesignWidth="600" DataContext="{dxmvvm:ViewModelSource viewmodel:ProductionEqpMonitorVM}">
+﻿<UserControl x:Class="MesAdmin.Views.ProductionEqpMonitorView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewmodel="clr-namespace:MesAdmin.ViewModels"
+             mc:Ignorable="d"
+             d:DesignHeight="600"
+             d:DesignWidth="600"
+             DataContext="{dxmvvm:ViewModelSource viewmodel:ProductionEqpMonitorVM}">
     <UserControl.Resources>
         <DataTemplate x:Key="itemTemplate">
             <dxlc:GroupBox Header="{Binding DataContext.EqpName}" Content="{Binding}" Padding="0" MaximizeElementVisibility="Visible" MaxHeight="400" MaxWidth="760" MinHeight="140" MinWidth="130">
