--- a/MES/Views/QualityRequestLQCView.xaml
+++ b/MES/Views/QualityRequestLQCView.xaml
@@ -1,31 +1,30 @@
-﻿<UserControl    x:Class="MesAdmin.Views.QualityRequestLQCView"
-                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-                xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-                xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-                xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
-                xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-                xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-                xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                xmlns:common="clr-namespace:MesAdmin.Common.Common"
-                xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
-                xmlns:models="clr-namespace:MesAdmin.Models"
-                xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
-                xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-                xmlns:view="clr-namespace:MesAdmin.Views"
-                mc:Ignorable="d"
-                d:DesignHeight="436" d:DesignWidth="800">
+﻿<UserControl x:Class="MesAdmin.Views.QualityRequestLQCView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:common="clr-namespace:MesAdmin.Common.Common"
+             xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+             xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
+             xmlns:models="clr-namespace:MesAdmin.Models"
+             xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
+             xmlns:view="clr-namespace:MesAdmin.Views"
+             mc:Ignorable="d"
+             d:DesignHeight="436"
+             d:DesignWidth="800">
     <UserControl.DataContext>
         <ViewModels:QualityRequestVM/>
     </UserControl.DataContext>
-
     <UserControl.Resources>
         <common:CellTemplateSelector x:Key="cellTemplateSelector" />
     </UserControl.Resources>
-
     <dxmvvm:Interaction.Behaviors>
         <dxmvvm:OpenFileDialogService Title="{Binding Title}" 
             RestorePreviouslySelectedDirectory="True"
