--- a/MES/Views/Site/BAC90PP001C.xaml
+++ b/MES/Views/Site/BAC90PP001C.xaml
@@ -1,20 +1,21 @@
-﻿<UserControl  x:Class="MesAdmin.Views.BAC90PP001C"
-              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-              xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-              xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-              xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-              xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
-              xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-              xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-              xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
-              xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-              xmlns:view="clr-namespace:MesAdmin.Views"
-              mc:Ignorable="d"
-              d:DesignHeight="600" d:DesignWidth="800">
+﻿<UserControl x:Class="MesAdmin.Views.BAC90PP001C"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+             xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
+             xmlns:view="clr-namespace:MesAdmin.Views"
+             mc:Ignorable="d"
+             d:DesignHeight="600"
+             d:DesignWidth="800">
     <dxmvvm:Interaction.Behaviors>
         <dx:DialogService Name="StockView" DialogWindowStartupLocation="CenterOwner">
             <dx:DialogService.ViewTemplate>
