--- a/MES/Views/Site/ProductionHandOverView.xaml
+++ b/MES/Views/Site/ProductionHandOverView.xaml
@@ -14,7 +14,8 @@
              xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
              xmlns:view="clr-namespace:MesAdmin.Views"
              mc:Ignorable="d"
-             d:DesignHeight="436" d:DesignWidth="800">
+             d:DesignHeight="436"
+             d:DesignWidth="800">
     <UserControl.DataContext>
         <ViewModels:ProductionHandOverVM/>
     </UserControl.DataContext>
