--- a/MES/Views/StockCloseView.xaml
+++ b/MES/Views/StockCloseView.xaml
@@ -1,20 +1,15 @@
-﻿<UserControl xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"  x:Class="MesAdmin.Views.StockCloseView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    mc:Ignorable="d"
-    xmlns:dxt="http://schemas.devexpress.com/winfx/2008/xaml/core/themekeys"
-    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm" 
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors" 
-    d:DesignHeight="600" d:DesignWidth="800"
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-    xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
-    xmlns:view="clr-namespace:MesAdmin.Views"             
-    DataContext="{dxmvvm:ViewModelSource Type=ViewModels:StockCloseVM}"             
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon">
-
+﻿<UserControl x:Class="MesAdmin.Views.StockCloseView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
+             mc:Ignorable="d"
+             d:DesignHeight="600" d:DesignWidth="800"
+             DataContext="{dxmvvm:ViewModelSource Type=ViewModels:StockCloseVM}">
     <Grid IsEnabled="{Binding IsEnabled}">
         <dx:DXTabControl Margin="5 20 5 5" Height="400" VerticalAlignment="Top">
             <dx:DXTabControl.BackgroundTemplate>
