--- a/MES/App.xaml
+++ b/MES/App.xaml
@@ -1,6 +1,6 @@
 ﻿<Application x:Class="MesAdmin.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:view="clr-namespace:MesAdmin.Views"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="Authentication\LoginView.xaml" Exit="Application_Exit">
     <Application.Resources>
         <ResourceDictionary Source="/Resources/Dictionary/ResourceDictionary.xaml" />
