--- a/MES/Views/ExceptionInView.xaml
+++ b/MES/Views/ExceptionInView.xaml
@@ -15,25 +15,13 @@
              xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
              xmlns:view="clr-namespace:MesAdmin.Views"
              mc:Ignorable="d"
-             d:DesignHeight="436" d:DesignWidth="800">
+             d:DesignHeight="436"
+             d:DesignWidth="800">
     <UserControl.DataContext>
         <ViewModels:ExceptionInVM/>
     </UserControl.DataContext>
 
     <dxmvvm:Interaction.Behaviors>
-        <dx:DialogService Name="PopupItemView" DialogWindowStartupLocation="CenterOwner">
-            <dx:DialogService.ViewTemplate>
-                <DataTemplate>
-                    <view:PopupItemView/>
-                </DataTemplate>
-            </dx:DialogService.ViewTemplate>
-            <dx:DialogService.DialogStyle>
-                <Style TargetType="dx:DXDialogWindow">
-                    <Setter Property="Width" Value="680"/>
-                    <Setter Property="Height" Value="550"/>
-                </Style>
-            </dx:DialogService.DialogStyle>
-        </dx:DialogService>
         <dx:DialogService Name="StockMoveView" DialogWindowStartupLocation="CenterOwner">
             <dx:DialogService.ViewTemplate>
                 <DataTemplate>
