--- a/MES/Views/CommonItemNewView.xaml
+++ b/MES/Views/CommonItemNewView.xaml
@@ -13,10 +13,12 @@
              xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
              xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
              xmlns:view="clr-namespace:MesAdmin.Views"
+             xmlns:models="clr-namespace:MesAdmin.Models"
              mc:Ignorable="d"
              d:DesignHeight="600" d:DesignWidth="900"
              DataContext="{dxmvvm:ViewModelSource Type=ViewModels:CommonItemNewVM}">
     <UserControl.Resources>
+        <utils:CascadingWorkAreaFromWhCode x:Key="CascadingWorkAreaFromWhCode"/>
         <dxmvvm:ObjectToObjectConverter x:Key="EntityStateConverter">
             <dxmvvm:MapItem Source="Added" Target="True"/>
             <dxmvvm:MapItem Source="Modified" Target="False"/>
@@ -71,6 +73,7 @@
                             <ColumnDefinition Width="220" />
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
+                            <RowDefinition/>
                             <RowDefinition/>
                             <RowDefinition/>
                             <RowDefinition/>
@@ -185,32 +188,61 @@
                             AutoPopulateColumns="False"
                             IsPopupAutoWidth="False"
                             PopupContentTemplate="{StaticResource WhCodeTemplate}" />
-                        <Border Grid.Row="5" Grid.Column="0">
+                        <Border Grid.Row="4" Grid.Column="0">
+                            <TextBlock>조달구분</TextBlock>
+                        </Border>
+                        <dxe:ComboBoxEdit
+                            EditValue="{Binding SelectedItem.ProcureType, UpdateSourceTrigger=PropertyChanged}"
+                            DisplayMember="Text"
+                            ValueMember="Value"
+                            Grid.Row="4"
+                            Grid.Column="1"
+                            Margin="2 0 0 0"
+                            Background="#F6EDCB"
+                            VerticalAlignment="Bottom">
+                            <models:ItemInfo Text="사내가공품" Value="M"/>
+                            <models:ItemInfo Text="외주가공품" Value="O"/>
+                            <models:ItemInfo Text="구매품" Value="P"/>
+                        </dxe:ComboBoxEdit>
+                        <Border Grid.Row="4" Grid.Column="3">
+                            <TextBlock>생산공정</TextBlock>
+                        </Border>
+                        <dxe:ComboBoxEdit
+                            ItemsSource="{Binding SelectedItem.InWhCode, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CascadingWorkAreaFromWhCode}}"
+                            EditValue="{Binding SelectedItem.InWaCode, UpdateSourceTrigger=PropertyChanged}"
+                            DisplayMember="WaName"
+                            ValueMember="WaCode"
+                            NullValueButtonPlacement="EditBox"
+                            Grid.Row="4"
+                            Grid.Column="4"
+                            Margin="2 0 0 0"
+                            VerticalAlignment="Bottom" />
+                        <Border Grid.Row="6" Grid.Column="0">
                             <TextBlock>수입검사</TextBlock>
                         </Border>
                         <dxe:CheckEdit IsChecked="{Binding SelectedItem.IQCFlag, UpdateSourceTrigger=PropertyChanged}"
-                                Grid.Row="5" Grid.Column="1" VerticalAlignment="Bottom" Margin="2 0 0 0" />
-                        <Border Grid.Row="6" Grid.Column="0">
+                                Grid.Row="6" Grid.Column="1" VerticalAlignment="Bottom" Margin="2 0 0 0" />
+                        <Border Grid.Row="7" Grid.Column="0">
                             <TextBlock>공정검사</TextBlock>
                         </Border>
                         <dxe:CheckEdit IsChecked="{Binding SelectedItem.LQCFlag, UpdateSourceTrigger=PropertyChanged}"
-                                Grid.Row="6" Grid.Column="1" VerticalAlignment="Bottom" Margin="2 0 0 0" />
-                        <Border Grid.Row="7" Grid.Column="0">
+                                Grid.Row="7" Grid.Column="1" VerticalAlignment="Bottom" Margin="2 0 0 0" />
+                        <Border Grid.Row="8" Grid.Column="0">
                             <TextBlock>최종검사</TextBlock>
                         </Border>
                         <dxe:CheckEdit IsChecked="{Binding SelectedItem.FQCFlag, UpdateSourceTrigger=PropertyChanged}"
-                                Grid.Row="7" Grid.Column="1" VerticalAlignment="Bottom" Margin="2 0 0 0" />
-                        <Border Grid.Row="8" Grid.Column="0">
+                                Grid.Row="8" Grid.Column="1" VerticalAlignment="Bottom" Margin="2 0 0 0" />
+                        <Border Grid.Row="9" Grid.Column="0">
                             <TextBlock>포장검사</TextBlock>
                         </Border>
                         <dxe:CheckEdit IsChecked="{Binding SelectedItem.OQCFlag, UpdateSourceTrigger=PropertyChanged}"
-                                Grid.Row="8" Grid.Column="1" VerticalAlignment="Bottom" Margin="2 0 0 0" />
+                                Grid.Row="9" Grid.Column="1" VerticalAlignment="Bottom" Margin="2 0 0 0" />
 
-                        <Border Grid.Row="10" Grid.Column="0">
+                        <Border Grid.Row="11" Grid.Column="0">
                             <TextBlock>사용여부</TextBlock>
                         </Border>
                         <dxe:CheckEdit IsChecked="{Binding SelectedItem.IsEnabled, UpdateSourceTrigger=PropertyChanged}"
-                                Grid.Row="10" Grid.Column="1" VerticalAlignment="Bottom" Margin="2 0 0 0" />
+                                Grid.Row="11" Grid.Column="1" VerticalAlignment="Bottom" Margin="2 0 0 0" />
                     </Grid>
                 </ScrollViewer>
             </dx:DXTabItem >
